# reeng-be

./: .env.example  .gitignore  API_DOCUMENTATION.md  BUILD_FIX.md  Cargo.toml  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_7 APRIL.md  Dockerfile  Dockerfile.post  Dockerfile.pre  ENUM_VALUE.md  Jenkinsfile  Makefile  RAILWAY_DEPLOYMENT.md  README.md  SmartElco_API_Collection.postman_collection.json  history.txt  package-lock.json  scratch.rs  test_all_changes.sh  test_build.sh
src/: common.rs  config.rs  extractors.rs  main.rs  models.rs  permissions.rs  services.rs  state.rs
src/handlers/: auth.rs  bulk_import.rs  costs.rs  files.rs  materials.rs  mod.rs  people.rs  project.rs  regions.rs  site.rs  site_stages.rs  teams.rs  termins.rs
