[package]
name = "reengineering-tool-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4"] }
surrealdb = { version = "2", features = ["protocol-http"] }
base64 = "0.21"
calamine = { version = "0.24", features = ["dates"] }
